[tool.poetry]
name = "dal"
version = "0.1.2"
description = ""
authors = ["roman-dector <roman.schaposhnikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
peewee = "^3.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
